--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "astro-seo": "^0.8.4",
     "sass": "^1.82.0",
     "tailwindcss": "^3.4.16"
+    "@fontsource/parisienne": "^5.0.13",
+
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.14.1",
