--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "astro-icon": "^1.1.4",
     "astro-seo": "^0.8.4",
     "sass": "^1.82.0",
-    "tailwindcss": "^3.4.16"
-    "@fontsource/parisienne": "^5.0.13",
+    "tailwindcss": "^3.4.16",
+    "@fontsource/parisienne": "^5.0.13"
 
   },
   "devDependencies": {
