--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "astro-icon": "^1.1.4",
     "astro-seo": "^0.8.4",
     "sass": "^1.82.0",
-    "tailwindcss": "^3.4.16",
-    "resend": "^3.0.0"
+    "tailwindcss": "^3.4.16"
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-tailwindcss": "^0.6.9",
-    "@tailwindcss/typography": "^0.5.15"
+    "@tailwindcss/typography": "^0.5.15",
+    "resend": "^3.0.0"
   },
   "overrides": {
     "sharp": "^0.33.0"
