--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource-variable/work-sans": "^5.1.0",
     "@fontsource/cinzel-decorative": "^5.1.0",
     "@iconify-json/tabler": "^1.2.10",
+    "@nextui-org/react": "^2.6.11",
     "@playform/compress": "^0.1.6",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
