--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/mdx": "^4.0.2",
+    "@astrojs/mdx": "^0.19.7",
     "@astrojs/rss": "^4.0.10",
     "@astrojs/sitemap": "^3.2.1",
-    "@astrojs/tailwind": "^5.1.3",
+    "@astrojs/tailwind": "^3.1.2",
     "@fontsource-variable/playfair-display": "^5.1.0",
     "@fontsource-variable/raleway": "^5.1.0",
     "@fontsource-variable/work-sans": "^5.1.0",
@@ -23,10 +23,11 @@
     "@playform/compress": "^0.1.6",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "astro": "^5.0.4",
+    "astro": "^2.4.5",
     "astro-auto-import": "^0.4.4",
     "astro-icon": "^1.1.4",
     "astro-seo": "^0.8.4",
+    "react-hook-form": "^7.54.2",
     "sass": "^1.82.0",
     "tailwindcss": "^3.4.16"
   },
